Collection's holdout works wrong in EEVEE if objects share same material across collections #72506

Closed
opened 2019-12-17 11:37:24 +01:00 by Michael Soluyanov · 12 comments

System Information
Operating system: Linux-4.15.0-72-generic-x86_64 ubuntu 18.04 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 23:15, hash: 1ef6be3686
Worked: not found

Short description of error
Collection's holdout works wrong in EEVEE if objects share same material across layers

Exact steps for others to reproduce the error

  • Setup scene with 2 objects in 2 collections with one material, or use the file
    holdouttest.blend
  • Set Holdout to first collection in the list
    Снимок экрана от 2019-12-17 13-29-31.png
  • Result - both objects are masked:
    Снимок экрана от 2019-12-17 13-30-48.png
  • Set separate material for one of the objects - now it works as expected:
    Снимок экрана от 2019-12-17 13-32-49.png
**System Information** Operating system: Linux-4.15.0-72-generic-x86_64 ubuntu 18.04 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-16 23:15, hash: `1ef6be3686` Worked: not found **Short description of error** Collection's holdout works wrong in EEVEE if objects share same material across layers **Exact steps for others to reproduce the error** * Setup scene with 2 objects in 2 collections with one material, or use the file [holdouttest.blend](https://archive.blender.org/developer/F8228718/holdouttest.blend) * Set Holdout to first collection in the list ![Снимок экрана от 2019-12-17 13-29-31.png](https://archive.blender.org/developer/F8228706/Снимок_экрана_от_2019-12-17_13-29-31.png) * Result - both objects are masked: ![Снимок экрана от 2019-12-17 13-30-48.png](https://archive.blender.org/developer/F8228714/Снимок_экрана_от_2019-12-17_13-30-48.png) * Set separate material for one of the objects - now it works as expected: ![Снимок экрана от 2019-12-17 13-32-49.png](https://archive.blender.org/developer/F8228716/Снимок_экрана_от_2019-12-17_13-32-49.png)
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

#75520 was marked as duplicate of this issue

#75520 was marked as duplicate of this issue

#75082 was marked as duplicate of this issue

#75082 was marked as duplicate of this issue

#72139 was marked as duplicate of this issue

#72139 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm.
It is as if holdout is a property of the material.

I can confirm. It is as if holdout is a property of the material.

Added subscribers: @fulviobosco, @Jeroen-Bakker

Added subscribers: @fulviobosco, @Jeroen-Bakker

In #72506#831841, @mano-wii wrote:
I can confirm.
It is as if holdout is a property of the material.

This resolve the holdout problem but in eevee indirect only on mac Os it still does not work.

> In #72506#831841, @mano-wii wrote: > I can confirm. > It is as if holdout is a property of the material. This resolve the holdout problem but in eevee indirect only on mac Os it still does not work.

Added subscribers: @Cenda, @bent

Added subscribers: @Cenda, @bent

Added subscriber: @shield

Added subscriber: @shield

This issue was referenced by 40f2c92460

This issue was referenced by 40f2c92460c356f5ab22d4b9e138383014d95aae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-23 17:41:31 +02:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72506
No description provided.