Fix T72506 EEVEE: Collection Holdout propagates accross material instances

This fix the issue by introducing a default material only for collection
holdouts. This avoids hash colision when the same material is used in
collections without holdout enabled.